fix product overflow on mobile

--- a/web/wp-content/themes/mozilla-labs/static/scss/app.scss
+++ b/web/wp-content/themes/mozilla-labs/static/scss/app.scss
@@ -191,7 +191,7 @@ body {
   }
 
   .type-text-20 {
-    @apply text-[20px] font-sans font-normal leading-tighter tracking-[-0.025em];
+    @apply text-[20px] font-sans font-normal leading-tighter font-wght-480 tracking-[-0.025em];
   }
 
   .type-sans-md {
